--- a/index-2.html
+++ b/index-2.html
@@ -1,4 +1,15 @@
-<iframe height="886" style="width: 100%;" scrolling="no" title="Iframe interact.js" src="//codepen.io/tommywang/embed/rVLBbq/?height=886&theme-id=dark&default-tab=css,result" frameborder="no" allowtransparency="true" allowfullscreen="true">
-    See the Pen <a href='https://codepen.io/tommywang/pen/rVLBbq/'>Iframe interact.js</a> by Shiyue Wang
-    (<a href='https://codepen.io/tommywang'>@tommywang</a>) on <a href='https://codepen.io'>CodePen</a>.
-  </iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link href="style-2.css" rel="Stylesheet" type="text/css"/>
+</head>
+<body>
+        <iframe src="https://codepen.io/janikwibilea/pen/gEyXRr"></iframe>
+</body>
+</html>
+
+
