projekt management angefangen

--- a/index.html
+++ b/index.html
@@ -1122,6 +1122,13 @@
 
         </div>
 
+        <h1>Projekt Management</h1>
+        <hr class="hr-1"/>
+        <div class="projekt-management">
+            <h4>Nutzen</h4>
+            <p>Um ein Projekt strikt führen zo können, ohne dabei die Kontrolle und den Überblick zu verlieren, muss entweder SCRUM oder Kanban genutzt werden.</p>
+        </div>
+
 
         <h1>Glossar</h1>
         <hr class="hr-1" />
